--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,25 @@
+.__navbar {
+    height: 80px;
+    position: fixed;
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+    .__navbar .container {
+        max-width: 1680px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
 
+.__showcase {
+    background: rgb(230,230,230);
+    background: linear-gradient(90deg, rgba(230,230,230,1) 0%, rgba(245,245,245,1) 100%);
+    padding-top: 100px;
+}
+    .__showcase .container {
+        max-width: 1680px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
